<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wardrobe.www.DivisionActivity"
    android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RelativeLayout
                android:id="@+id/layout_wardrobe_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                >

                <ImageView
                    android:id="@+id/wardrobe_image_top"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_top" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/wardrobe_image_top"
                    android:layout_toRightOf="@+id/wardrobe_image_top">

                    <TextView
                        android:id="@+id/wardrobe_text_top"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wardrobe_top"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wardrobe_text_top"
                        android:layout_marginTop="8dp"
                        android:text="@string/wardrobe_top_describe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_go" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_wardrobe_bottoms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_wardrobe_top"
                android:background="@color/gray"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/image_bottoms"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_bottoms" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/image_bottoms"
                    android:layout_toRightOf="@+id/image_bottoms">

                    <TextView
                        android:id="@+id/wardrobe_bottoms"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wardrobe_bottoms"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wardrobe_bottoms"
                        android:layout_marginTop="8dp"
                        android:text="@string/wardrobe_bottoms_describe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_go" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_wardrobe_skirt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_wardrobe_bottoms"
                android:background="@color/gray"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/image_skirt"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_skirt" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/image_skirt"
                    android:layout_toRightOf="@+id/image_skirt">

                    <TextView
                        android:id="@+id/wardrobe_skirt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wardrobe_skirt"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wardrobe_skirt"
                        android:layout_marginTop="8dp"
                        android:text="@string/wardrobe_skirt_describe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_go" />

            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/layout_wardrobe_shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_wardrobe_skirt"
                android:background="@color/gray"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/image_shoes"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_shoes" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/image_shoes"
                    android:layout_toRightOf="@+id/image_shoes">

                    <TextView
                        android:id="@+id/wardrobe_shoes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wardrobe_shoes"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wardrobe_shoes"
                        android:layout_marginTop="8dp"
                        android:text="@string/wardrobe_shoes_describe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_go" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_wardrobe_overcoat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_wardrobe_shoes"
                android:background="@color/gray"
                android:layout_marginTop="8dp">

                <ImageView
                    android:id="@+id/image_overcoat"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_overcoat" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/image_overcoat"
                    android:layout_toRightOf="@+id/image_overcoat">

                    <TextView
                        android:id="@+id/wardrobe_overcoat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wardrobe_overcoat"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wardrobe_overcoat"
                        android:layout_marginTop="8dp"
                        android:text="@string/wardrobe_overcoat_describe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_go" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_wardrobe_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_wardrobe_overcoat"
                android:background="@color/gray"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/image_other"
                    android:layout_width="130dp"
                    android:layout_height="140dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/img_other" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@id/image_other"
                    android:layout_toRightOf="@+id/image_other">

                    <TextView
                        android:id="@+id/wardrobe_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wardrobe_other"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/wardrobe_other"
                        android:layout_marginTop="8dp"
                        android:text="@string/wardrobe_other_describe"
                        android:textColor="@color/black"
                        android:textSize="12sp" />

                </RelativeLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:src="@drawable/icon_go" />

            </RelativeLayout>
        </RelativeLayout>
</ScrollView>
